# heb-ipa-transcribe

./: .gitignore  README.md  pyproject.toml
pipeline/: downloader.py  run.py  transcriber.py
poc/: download.py  transcribe.py
postprocess/: main.py
scripts/: export_ct2.sh  transcribe.sh
src/: preprocessor.py  run.py  transcriber.py
