[project]
name = "heb-ipa-transcribe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "ctranslate2",
    "datasets>=4.6.1",
    "faster-whisper>=1.2.1",
    "huggingface-hub>=1.5.0",
    "pandas>=3.0.1",
    "silero-vad>=6.2.1",
    "soundfile>=0.13.1",
    "tqdm>=4.67.3",
]

# For the DGX Spark
# [tool.uv.sources]
# ctranslate2 = { path = "../../wheels/ctranslate2-4.7.1-cp312-cp312-linux_aarch64.whl" }
